Fixed alignment of sidebar when content area is too small

--- a/src/assets/stylesheets/main/layout/_content.scss
+++ b/src/assets/stylesheets/main/layout/_content.scss
@@ -26,6 +26,7 @@
 
 // Content container
 .md-content {
+  flex-grow: 1;
   overflow: auto;
 
   // Define spacing
